[project]
name = "scikit-elm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anton Akusok", email = "akusok.a@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
