[project]
name = "scikit-elm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anton Akusok", email = "akusok.a@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cloudpickle>=3.1.1",
    "dask>=2025.2.0",
    "distributed>=2025.2.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pytest>=8.3.4",
]
doc = [
    "sphinx>=8.2.1",
    "sphinx-gallery>=0.19.0",
]
